syntax = "proto3";
package SocketDemoProtocol;

enum RequestCode
{
    RequestNone=0;
    //用户
    User=1;
    //房间
    Room=2;
    //游戏
    Game=3;
}
enum RoomState
{
    //等待加入
    waitting=0;
    //游戏中
    gaming=1;
    //房间人数已满
    full=2;
}
enum ActionCode
{
    ActionNone=0;
    //注册
    Logon=1;
    //登录
    Login=2;
    //创建房间
    CreatRoom=3;
    //查询房间
    SearchRoom=4;
    //获取玩家列表
    PlayerList=5;
    //加入房间
    JoinRoom=6;
    //离开房间
    Exit=7;
    //聊天
    Chat=8;
    //通知开始游戏
    StartGame=9;
    //正式开始游戏,游戏初始化
    ServerStartGame=10;
    //状态同步
    UpdateState=11;
    //血量同步
    UpdateHp=12;
    //退出游戏
    GameExit=13;
    //更新玩家位置
    UpdatePos=14;
    //射击
    Shoot=15;
}

enum ReturnCode
{
    ReturnNone=0;
    //成功
    Succeed=1;
    //失败
    Fail=2;
    //没有房间
    NoRoom=3;
}

message MainPack
{
    RequestCode requestCode=1;
    ActionCode actionCode=2;
    ReturnCode returnCode=3;
    LoginPack  loginPack=4;
    string str=5;
    repeated RoomPack roomPack = 6;
    repeated PlayerPack playerPack = 7;
    string joinRoomName=8;
    string chatStr = 9;
    string exitGameName = 10;
    BulletPack bulletPack=11;
    string username=12;
}

message LoginPack
{
    string username=1;//用户名
    string password=2;//密码
}

message RoomPack
{
    string roomName=1;
    int32 maxNum=2;
    int32 currentNum=3;
    RoomState roomState = 4;
}

message PlayerPack 
{
    //玩家名称
    string playerName=1;
    //玩家胜场
    int32 winCount=2;
    //玩家id
    string playerID=3;
    //玩家血量
    int32 hp=4;
    //位置信息
    PostionPack postionPack = 5;
}

message PostionPack
{
    float x = 1;
    float y = 2;
    float rotZ = 3;
}

message BulletPack
{

    float x = 1;
    float y = 2;
    float rotZ = 3;
}